searchBox fixes gaps between divs (number instead boolean var!)

--- a/apps/amazin/src/Features/Nav/nav.css
+++ b/apps/amazin/src/Features/Nav/nav.css
@@ -95,7 +95,7 @@ a .nav__brand {
   outline: none; /*safari*/
 }
 .search-box.focus,
-.search-box__scope.focus {
+.cat-scope.focus {
   box-shadow: 0 0 0px 3px #f806, 0 0 1px 3px #f3a847;
   z-index: 9000;
 }
@@ -112,14 +112,14 @@ a .nav__brand {
   flex: 0 0 45px;
   display: flex;
 }
-.search__dropdown {
+.search-box__cat-scope {
   display: flex;
 }
-.search__dropdown:focus {
+.search-box__cat-scope:focus {
   border: none;
   box-shadow: 0 0 2px 3px #f3a847, 0 0 2px 3px #f80;
 }
-.search-box__scope {
+.cat-scope {
   display: flex;
   position: relative;
   float: left;
@@ -142,20 +142,20 @@ a .nav__brand {
   overflow: hidden;
   cursor: pointer;
 }
-.search-box__scope.focus {
+.cat-scope.focus {
   color: #000;
   background: #c7cbcf;
   border-color: #6e6e6e6e;
   background: -webkit-linear-gradient(to bottom, #c7cbcf, #e2e2e2);
   background: linear-gradient(to bottom, #c7cbcf, #e2e2e2);
 }
-.search-box__scope--facade {
+.cat-scope--facade {
   display: flex;
   position: relative;
   float: left;
   top: 3px;
 }
-.search-box__scope span {
+.cat-scope span {
   display: block;
   overflow: hidden;
   white-space: nowrap;
@@ -167,7 +167,7 @@ a .nav__brand {
   min-width: 19px;
   max-width: 200px;
 }
-.search-box__scope i {
+.cat-scope i {
   position: absolute;
   width: 0;
   height: 0;
@@ -179,10 +179,10 @@ a .nav__brand {
   font-size: 0;
   line-height: 0;
 }
-.search-box__scope.focus i {
+.cat-scope.focus i {
   border-top-color: #000;
 }
-.scope__windows {
+.cat-scope__dropdown {
   position: absolute;
   padding: 4px 0;
   top: 36px;
@@ -195,7 +195,7 @@ a .nav__brand {
   user-select: none;
   z-index: 9000;
 }
-.scope__drop-list {
+.cat-scope__dropdown .dropdown__list {
   width: 28rem;
   max-height: 36rem;
   font-size: 15px;
